front-end table fixed overflow

--- a/views/include/style.css
+++ b/views/include/style.css
@@ -16,7 +16,7 @@ nav {
     width: fit-content;
     height: 100vh;
     width: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
     color: white;
 }
 
@@ -61,7 +61,7 @@ li {
     height: 100vh;
     max-height: 100vh;
     max-width: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 
@@ -71,9 +71,24 @@ li {
     display: block;
     width: 100%;
     height: 80%;
-    /* overflow-y: scroll; */
+    overflow-x: auto;
+    /* background-color: rgb(194, 136, 136); */
+    border-collapse: separate;
+    border-spacing: 4px;
 }
 
+
+.repeatable:nth-child(even) {
+    background: rgb(242, 171, 171)
+}
+
+.repeatable:nth-child(odd) {
+    background: rgb(213, 143, 143)
+}
+
+.announcements .ann-adding-btn {
+    background-color: #450404;
+}
 
 .table-heading,
 .log-heading,
@@ -81,7 +96,7 @@ li {
 .course-heading,
 .std-heading {
     margin: 0;
-    padding: 0.5vw 0;
+    padding: 1vw 0;
     background-color: rgba(33, 33, 33, 1);
     text-align: center;
     color: white;
@@ -92,16 +107,24 @@ td,
 tr {
 
     margin: 0;
-    padding: 0;
-
-    background-color: rgba(33, 33, 33, 0.5);
-
+    padding: 10px 5px;
     color: black;
     font-size: 22px;
-
-    border: 3px solid black;
+    border: none;
 }
 
+th {
+    background-color: #490202;
+    color: white;
+}
+
+tr:nth-child(even) {
+    background: rgb(228, 160, 160)
+}
+
+tr:nth-child(odd) {
+    background: rgb(209, 111, 111)
+}
 
 /*Form designing*/
 
